[tool.poetry]
name = "c7n-mailer-designer"
version = "0.1.0"
description = "c7n mailer designer"
authors = ["Phillip Bristow <"pmbristow@lilly.com"]
readme = "README.md"
homepage = "https://lilly-confluence.atlassian.net/l/cp/7L1rEsHZ"
repository = "https://github.com/PoeBlu/Project.git"
keywords = [
    "Flask",
    "Jinja2",
    "Jinja",
    "Templating",
    "Page Templates"
    "c7n"
    "Cloud Custdoian Mailer" 

]

[tool.poetry.dependencies]
python = "^3.8"
flask = "*"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.6.4"

[tool.poetry.scripts]
run = "wsgi:app"

[tool.poetry.urls]
issues = "https://github.com/PoeBlu/Project/issues"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
