[tool.poetry]
name = "flask-jinja-tutorial"
version = "0.1.0"
description = ""
authors = ["Phillip Bristow <pmbristow@lilly.com>"]

[tool.poetry.dependencies]
python = "^3.9"
appdirs = "^1.4.4"
black = "click"
click = "^8.1.3"
Flask = "^2.2.2"
isort = "^5.10.1"
itsdangerous = "^2.1.2"
jinja2-render = "^1.3"
Jinja2 = "^3.1.2"
types-MarkupSafe = "^1.1.10"
mypy-extensions = "^0.4.3"
pathspec = "^0.9.0"
regex = "^2022.7.25"
toml = "^0.10.2"
typed = "^0.6"
typing-extensions = "wekzeug"
Werkzeug = "^2.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
